feat/products, implementação do serviço, rota e controladora para o produto. tambem a configuração de quem vai acessar a rota.
