# src/main.js
@@ -7,17 +7,20 @@ import { appPort } from "./env/envoriment.js";
 import connectDB from "./config/mongo.config.js";
 import authRouter from "./auth/auth.router.js";
 import cookieParser from "cookie-parser";
+import productRouter from "./products/product.router.js";
 
 app.use(express.json());
 app.use(cookieParser());
 app.use(express.urlencoded({ extended: true }));
 app.use(cors());
 app.use("/auth", authRouter);
+app.use('/products', productRouter);
 
 app.use(
   "/api",
   swaggerUi.serve,
   swaggerUi.setup(swaggerDocument, {
+  
     customJs: [
       "https://cdnjs.cloudflare.com/ajax/libs/swagger-ui/4.15.5/swagger-ui-bundle.min.js",
       "https://cdnjs.cloudflare.com/ajax/libs/swagger-ui/4.15.5/swagger-ui-standalone-preset.min.js",
